--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Austin Wright</title>
+    <title>My Portfolio</title>
 </head>
 <body>
-    <p>hello</p>
+    <div class = "row-background"></div>
+    <h1 id = "name">Austin Wright</h1>
+    <nav id = "navigation">
+        <ul>
+            <li><a href = "#">Projects</a></li>
+            <li><a href = "#">Resume</a></li>
+            <li><a href = "#">Contact</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
