added a profile pic, going to fix nav bar later

--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
             <li><a href = "#">Contact</a></li>
         </ul>
     </nav>
+    <div id = "profile-pic">
+    </div>
 </body>
 </html>
