fixed nav bar and adjusted profile pic

--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    <div class = "row-background"></div>
+    <!-- <div class = "row-background"></div> -->
+    <div id = "navigation">
     <h1 id = "name">Austin Wright</h1>
-    <nav id = "navigation">
+    <nav>
         <ul>
+            <div id = "nav_options">
             <li><a href = "#">Projects</a></li>
             <li><a href = "#">Resume</a></li>
             <li><a href = "#">Contact</a></li>
+            </div>
         </ul>
     </nav>
+    </div>
     <div id = "profile-pic">
     </div>
 </body>
