added typewrite effects

--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
     </div>
     <div id = "profile-pic">
     </div>
+    <div id = "typewriter">
+        <p class = "text">Hi, I'm Austin.</p>
+    </div>
 </body>
 </html>
