fixed typewriter animation and nav bar

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
         </ul>
     </nav>
     </div>
-    <div id = "profile-pic">
-    </div>
+    <div id = "pic_and_typing">
+    <div id = "profile-pic"></div>
     <div id = "typewriter">
         <p class = "text">Hi, I'm Austin.</p>
+    </div>
     </div>
 </body>
 </html>
