started on about me page and fine tuned the picture for different screen sizes

--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
     <title>My Portfolio</title>
 </head>
 <body>
-    <!-- <div class = "row-background"></div> -->
     <div id = "navigation">
     <h1 id = "name">Austin Wright</h1>
     <nav>
         <ul>
             <div id = "nav_options">
+            <li><a href = "#">About Me</a></li>
             <li><a href = "#">Projects</a></li>
             <li><a href = "#">Resume</a></li>
             <li><a href = "#">Contact</a></li>
@@ -27,6 +28,9 @@
     <div id = "profile-pic"></div>
     <div id = "typewriter">
         <p class = "text">Hi, I'm Austin.</p>
+    </div>
+    <div id = "description" style = "opacity: 0;">
+        <p class = "text2">And I'm studying Computer Science.</p>
     </div>
     </div>
 </body>
