--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <nav>
         <ul>
             <div id = "nav_options">
-            <li><a href = "#">About Me</a></li>
-            <li><a href = "#">Projects</a></li>
-            <li><a href = "#">Resume</a></li>
-            <li><a href = "#">Contact</a></li>
+            <li><a href = "#about_me">About Me</a></li>
+            <li><a href = "#projects">Projects</a></li>
+            <li><a href = "#resume">Resume</a></li>
+            <li><a href = "#contact">Contact</a></li>
             </div>
         </ul>
     </nav>
@@ -33,5 +33,8 @@
         <p class = "text2">And I'm studying Computer Science.</p>
     </div>
     </div>
+    <section id = "about_me" class = "about_me">
+        <h2 id ="heading">About Me</h2>
+    </section>
 </body>
 </html>
