almost done with the about me section

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <script src="script.js"></script>
     <title>My Portfolio</title>
 </head>
-<body>
+<body id = "home">
     <div id = "navigation">
-    <h1 id = "name">Austin Wright</h1>
+    <h1 id = "name"><a href = "#home">Austin Wright</a></h1>
     <nav>
         <ul>
             <div id = "nav_options">
@@ -36,5 +36,24 @@
     <section id = "about_me" class = "about_me">
         <h2 id ="heading">About Me</h2>
     </section>
+    <div class = "slider-frame">
+        <div class = "slide-images">
+            <div class = "img-container">
+                <img src = "images/IMG_0572.JPG" alt = "My fiance and I">
+            </div>
+            <div class = "img-container">
+                <img src = "images/IMG_9483.jpeg" alt = "The fam">
+            </div>
+            <div class = "img-container">
+                <img src = "images/IMG_0611.jpg" alt = "Apple Vision Pros">
+            </div>
+        </div>
+    </div>
+    <div id = "about_me_text">
+        <p>I was born and raised here in Utah. I grew up in the best family that consisted of
+            four brothers and one sister. Some of my hobbies include snowboarding, exercising,
+            drinking monster energy drinks, and programming! Here's what my life's been like
+            the past few years: </p>
+    </div>
 </body>
 </html>
