--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
-    <title>My Portfolio</title>
+    <title>Austin's Portfolio</title>
 </head>
 <body id = "home">
     <div id = "navigation">
@@ -39,10 +39,10 @@
     <div class = "slider-frame">
         <div class = "slide-images">
             <div class = "img-container">
-                <img src = "images/IMG_0572.JPG" alt = "My fiance and I">
+                <img src = "images/IMG_9483.jpeg" alt = "The fam">
             </div>
             <div class = "img-container">
-                <img src = "images/IMG_9483.jpeg" alt = "The fam">
+                <img src = "images/IMG_0572.JPG" alt = "My fiance and I">
             </div>
             <div class = "img-container">
                 <img src = "images/IMG_0611.jpg" alt = "Apple Vision Pros">
@@ -50,10 +50,18 @@
         </div>
     </div>
     <div id = "about_me_text">
-        <p>I was born and raised here in Utah. I grew up in the best family that consisted of
+        <p>I was born and raised in Utah. I grew up in the best family that consisted of
             four brothers and one sister. Some of my hobbies include snowboarding, exercising,
             drinking monster energy drinks, and programming! Here's what my life's been like
             the past few years: </p>
+    </div>
+    <div id = timeline>
+        <ul id = timeline-list>
+            <li id = "marker">Graduated high school with my Associates Degree in 2020 from <a href = "https://www.iechs.org/">Itineris Early College High School</a></li>
+            <li id = "marker">Served a two year mission for my church in Western Colorado from July 2021 to July 2023</li>
+            <li id = "marker">Started school back up at <a href = "https://www.uvu.edu/">Utah Valley University</a> in Fall 2023 to continue my studies in Computer Science</li>
+            <li id = "marker">Getting married in May of 2024!</li>
+        </ul>
     </div>
 </body>
 </html>
