added resume and started the project slider to hold all my projects

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <ul>
             <div id = "nav_options">
             <li><a href = "#about_me">About Me</a></li>
-            <li><a href = "#projects">Projects</a></li>
             <li><a href = "#resume">Resume</a></li>
+            <li><a href = "#projects">Projects</a></li>
             <li><a href = "#contact">Contact</a></li>
             </div>
         </ul>
@@ -63,5 +63,12 @@
             <li id = "marker">Getting married in May of 2024!</li>
         </ul>
     </div>
+    <section id = "resume" class = "resume">
+        <h2 id ="heading">Resume</h2>
+    </section>
+    <iframe src = "resume/resume_2.pdf#toolbar=0" id = "resume-frame"></iframe>
+    <section id = "projects" class = "projects">
+        <h2 id ="heading">Projects</h2>
+    </section>
 </body>
 </html>
